# docker-wasm

./: Cargo.toml  Dockerfile  Makefile  README.md
src/: infer.rs  main.rs
