[package]
name = "docker-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Wang <kwangsan@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httpcodec = "0.2.3"
bytecodec = "0.4.15"
wasmedge_wasi_socket = "0.4.2"
wasm-bindgen = "=0.2.61"
wasmedge_tensorflow_interface = "^0.2.2"
image = { version = "0.23.0", default-features = false, features = ["jpeg", "png", "gif"] }
imageproc = "0.21.0"
serde = { version = "^1.0.59", features = ["derive"] }
serde_json = "^1.0.51"

[[bin]]
name = "docker-wasm"
path = "src/main.rs"
