[package]
name = "docker-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Wang <kwangsan@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper_wasi = { version = "0.15", features = ["full"]}
tokio_wasi = { version = "1.21", features = ["rt", "macros", "net", "time", "io-util"]}

[[bin]]
name = "docker-wasm"
path = "src/main.rs"
